# cvd-risk-prediction-mlops

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/: README.md  dataset.csv.dvc.example
docs/: index.md  modules.md  project-structure.md
src/: __init__.py  main.py
src/data/: demo_dataset.py
src/inference/: __init__.py
src/models/: artifacts.py  champion_challenger.py  evaluation.py  register_best_model.py  run_experiment_series.py  select_best_run.py  train_experiment.py
src/utils/: mlflow_config.py
tests/: test_main.py
