[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvd-risk-prediction-mlops"
version = "0.1.0"
description = "ML/MLOps project for cardiovascular complication risk prediction."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Project Author" }
]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "mlflow>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "flake8>=7.0",
    "isort>=5.13",
    "ruff>=0.6",
    "dvc>=3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
